Add sync_status columns to base tables