@@ -1,15 +1,16 @@
 package mofo.com.pestscout.auth.security;
 
 import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
+import java.util.List;
 
 public class EdgeSyncAuthenticationToken extends AbstractAuthenticationToken {
 
     private final EdgeSyncPrincipal principal;
 
     public EdgeSyncAuthenticationToken(EdgeSyncPrincipal principal) {
-        super(Collections.emptyList());
+        super(List.of(new SimpleGrantedAuthority("ROLE_EDGE_SYNC")));
         this.principal = principal;
         setAuthenticated(true);
     }
